<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:longClickable="true"
    android:orientation="horizontal"
    android:paddingRight="10dp" 
    android:paddingBottom="10dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/numero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="15"
        android:orientation="vertical" >

        <!--<LinearLayout
            android:id="@+id/pdv_and_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/pdv_key"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="left"
                android:text="@string/pdv_adapter" />

            <TextView
                android:id="@+id/pdv_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:gravity="right"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/username_and_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/username_key"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="left"
                android:text="@string/username_adapter" />

            <TextView
                android:id="@+id/username_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:gravity="right"
                android:text="" />
        </LinearLayout>-->

        <LinearLayout
            android:id="@+id/sent_date_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/sent_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="left"
                android:text="@string/envoye_le" />

            <TextView
                android:id="@+id/sent_date_result"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:gravity="right"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/receive_date_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/receive_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="left"
                android:text="@string/recu_le" />

            <TextView
                android:id="@+id/receive_date_result"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:gravity="right"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/from_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/from"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="left"
                android:text="@string/expe" />

            <TextView
                android:id="@+id/from_result"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:gravity="right"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/message_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/message_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/message" />

            <ScrollView
                android:id="@+id/message_content_scrol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/message_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="#FFFFFFFF"
                    android:padding="10dp"
                    android:text=""
                    android:visibility="visible" />
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/me_supprimer"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="4"
                android:text="@string/supprimer"
                android:textSize="10sp"
                android:textColor="#ff0000"
                android:drawableLeft="@drawable/red_trash"
                android:drawablePadding="3dp"/>
            <ProgressBar
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:id="@+id/print_loader"
                android:visibility="gone"/>

            <Button
                android:id="@+id/imprimer_btn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:textSize="10sp"
                android:layout_height="35dp"
                android:layout_weight="4"
                android:textColor="@color/mycolor"
                android:text="@string/imprimer"
                android:drawableLeft="@drawable/imprinante"
                android:drawablePadding="3dp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>