<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="-50dp"
        android:id="@+id/logo_content"
        android:layout_marginLeft="-50dp"
        android:gravity="center_horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="0dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="-50dp"
            android:layout_marginLeft="-50dp"
            android:gravity="center_horizontal"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/mobilephone"
                />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/bluetooth"
                />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/printer"
                />
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark" />
    </LinearLayout>

    <ListView
        android:id="@+id/sms_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="0dp"
        android:layout_below="@id/logo_content"
        android:layout_marginBottom="25dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_margin="-5dp"
        android:gravity="center"
        android:background="@color/colorPrimaryDark"
        android:paddingBottom="3dp"
        android:paddingTop="3dp">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/red_trash"
            android:contentDescription="@string/app_name"
            android:id="@+id/delete_all_sms"
            android:layout_marginRight="50dp"/>
        <TextView
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/copyright"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimaryDark"
            />
        <TextView
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/softinovplus"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimaryDark"
            android:id="@+id/softinovplus"
            android:layout_marginLeft="5px"
            />
        <!--<TextView
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/slash"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_blue_dark"
            android:layout_marginLeft="5px"
            />
        <TextView
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/iservices"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_blue_dark"
            android:id="@+id/iservices"
            android:layout_marginLeft="5px"
            />-->
    </LinearLayout>

</RelativeLayout>
